--- a/index.html
+++ b/index.html
@@ -3,24 +3,24 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>SVG wall</title>
-    <link rel="stylesheet" href="/style/main.css" />
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,500;0,700;1,300&display=swap" rel="stylesheet">  </head>
-  <body>
-    <section id="main">
+    <title>Sebarz</title>
+    <link rel="stylesheet" href="/style/style.css" />
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">  <body>
+    <section class="main">
+      <h1 id="sebarz">Sebarz</h1>
+      <img src="/images/Splash 1.svg" id="splash1">
       <nav>
-        <a href="#" id="logo">SEBARZ</a>
-        <ul>
-          <li><a href="#">About me</a></li>
-          <li><a href="#">Proyects</a></li>
-          <li><a href="#">Contact me</a></li>
+        <img src="/images/Logo.png">
+        <ul> 
+          <a href="#">About me</a>
+          <a href="#">Proyects</a>
+          <a href="#">Contact me</a>
         </ul>
       </nav>
-      <div class="container">
-        <p id="hi">Hi, my name is</p>
-        <h1>Sebastian Ruiz</h1>
+      <div class="hello">
+        <p id="hi">Hello</p>
+        <h1>I'm Sebastian</h1>
         <p id="thing">I build things for the web</p>
-        <img src="./images/undraw_web_developer_p3e5 1.png">
       </div>
     </section>
     <section id="aboutme">
