--- a/index.html
+++ b/index.html
@@ -18,10 +18,11 @@
         </ul>
       </nav>
       <div class="hello">
+        <img src="/images/Hero I´M.png" id="heroiam">
         <p id="hi">Hello</p>
         <h1>I'm Sebastian</h1>
         <p id="thing">I build things for the web</p>
-      </div>
+      </div> 
     </section>
     <section id="aboutme">
     </section>
