Added about section

--- a/index.html
+++ b/index.html
@@ -17,14 +17,17 @@
           <a href="#">Contact me</a>
         </ul>
       </nav>
+      <img src="/images/Hero I´M.png" id="heroiam">
       <div class="hello">
-        <img src="/images/Hero I´M.png" id="heroiam">
         <p id="hi">Hello</p>
         <h1>I'm Sebastian</h1>
         <p id="thing">I build things for the web</p>
       </div> 
     </section>
-    <section id="aboutme">
+    <section class="aboutme">
+      <h1 id="aboutme">aboutme</h1>
+      <img src="/images/Splash 2.svg" id="splash2">
+      <img src="/images/Hero about.png" id="heroabout">
     </section>
   </body>
 </html>
