--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <nav>
         <img src="/images/Logo.png">
         <ul> 
-          <a href="#">About me</a>
+          <a href="#aboutme">About me</a>
           <a href="#">Proyects</a>
           <a href="#">Contact me</a>
         </ul>
@@ -28,6 +28,15 @@
       <h1 id="aboutme">aboutme</h1>
       <img src="/images/Splash 2.svg" id="splash2">
       <img src="/images/Hero about.png" id="heroabout">
+      <div class="about">
+        <h1>About me</h1>
+        <p>I’m a system engineering student currently based on Medellín, Colombia
+          <br><br>
+          I am focused in building and designing websites, applications, and everything in between.
+          <br><br>
+          Also passionate about photography, filmmaking and good coffee.</p>
+        <button>Resume</button>
+      </div> 
     </section>
   </body>
 </html>
