added skills section

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       <h1 id="sebarz">Sebarz</h1>
       <img src="/images/Splash 1.svg" id="splash1">
       <nav>
-        <img src="/images/Logo.png">
+        <a href="#"><img src="/images/Logo.png"></a>
         <ul> 
           <a href="#aboutme">About me</a>
           <a href="#">Proyects</a>
@@ -29,7 +29,7 @@
       <img src="/images/Splash 2.svg" id="splash2">
       <img src="/images/Hero about.png" id="heroabout">
       <div class="about">
-        <h1>About me</h1>
+        <h1>ABOUT ME</h1>
         <p>I’m a system engineering student currently based on Medellín, Colombia
           <br><br>
           I am focused in building and designing websites, applications, and everything in between.
@@ -37,6 +37,25 @@
           Also passionate about photography, filmmaking and good coffee.</p>
         <button>Resume</button>
       </div> 
+    </section>
+    <section class="myskills">
+      <h1 id="myskills">myskills</h1>
+      <h1>MY SKILLS</h1>
+      <div class="cards">
+        <div id="card1">
+          <h1>Web Development</h1>
+          <p>HTML, CSS, Sass Javascript, NodeJS, AJAX, SQL</p>
+        </div>
+        <div id="card2">
+          <h1>Desing</h1>
+          <p>Photoshop, Illustrator, Figma, Adobe XD</p>
+        </div>
+        <div id="card3">
+          <h1>Other</h1>
+          <p>Python, Bash, Git, Github, Filmmaking
+          </p>
+        </div>
+      </div>
     </section>
   </body>
 </html>
