Added proyects section

--- a/index.html
+++ b/index.html
@@ -57,5 +57,14 @@
         </div>
       </div>
     </section>
+    <section class="myproyects">
+      <div id="proyectsabout">
+        <div id="proyectsabouttext">
+          <h1>My proyects</h1>
+          <p>Some of the stuff i’ve been doing</p>
+        </div>
+        <button>Visit my github</button>
+      </div>
+    </section>
   </body>
 </html>
