--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sebarz</title>
     <link rel="stylesheet" href="/style/style.css" />
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">  <body>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">  
+    <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css">
+    <body>
     <section class="main">
       <h1 id="sebarz">Sebarz</h1>
       <img src="/images/Splash 1.svg" id="splash1">
@@ -52,8 +54,7 @@
         </div>
         <div id="card3">
           <h1>Other</h1>
-          <p>Python, Bash, Git, Github, Filmmaking
-          </p>
+          <p>Python, Bash, Git, Github, Filmmaking</p>
         </div>
       </div>
     </section>
@@ -65,6 +66,60 @@
         </div>
         <button>Visit my github</button>
       </div>
+      <div class="swiper-container">
+        <div class="swiper-wrapper">
+          <div class="swiper-slide">
+            <img src="images/negro.jpg">
+            <div class="text">
+              <h3>Proyecto 1</h3>
+              <p>breve descripcion del pryecto numero uno pero en inglés</p>
+            </div>
+          </div>
+          <div class="swiper-slide">
+            <img src="/images/negro.jpg" alt="">
+            <div class="text">
+              <h3>Proyecto 2</h3>
+              <p>breve descripcion del pryecto numero dos pero en inglés</p>
+            </div>
+          </div>
+          <div class="swiper-slide">
+            <img src="/images/negro.jpg" alt="">
+            <div class="text">
+              <h3>Proyecto 3</h3>
+              <p>breve descripcion del pryecto numero tres pero en inglés</p>
+            </div>
+          </div><div class="swiper-slide">
+            <img src="/images/negro.jpg" alt="">
+            <div class="text">
+              <h3>Proyecto 4</h3>
+              <p>breve descripcion del pryecto numero cuatro pero en inglés</p>
+            </div>
+          </div>
+        </div>
+      </div>
     </section>
+    <section class="sayhello">
+      <div class="email">
+        <h1>Say Hello at</h1>
+        <a href="mailto:sebarzp@gmail.com"><p>sebarzp@gmail.com</p></a>
+      </div>
+    </section>
+    <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
+    <script>
+      var swiper = new Swiper('.swiper-container', {
+        effect: 'coverflow',
+        grabCursor: true,
+        centeredSlides: true,
+        slidesPerView: 'auto', 
+        coverflowEffect: {
+          rotate: 50,
+          stretch: 0,
+          depth: 100,
+          modifier: 1,
+          slideShadows : false,
+        },
+        loop: 3,
+      });
+    </script>
   </body>
 </html>
