styled hello section

--- a/index.html
+++ b/index.html
@@ -101,8 +101,15 @@
     <section class="sayhello">
       <div class="email">
         <h1>Say Hello at</h1>
-        <a href="mailto:sebarzp@gmail.com"><p>sebarzp@gmail.com</p></a>
+        <a href="mailto:sebarzp@gmail.com">sebarzp@gmail.com</a>
       </div>
+      <nav>
+        <ul> 
+          <a href="#aboutme">About me</a>
+          <a href="#">Proyects</a>
+          <a href="#">Contact me</a>
+        </ul>
+      </nav>
     </section>
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
     <script>
