--- a/index.html
+++ b/index.html
@@ -12,11 +12,12 @@
       <h1 id="sebarz">Sebarz</h1>
       <img src="/images/Splash 1.svg" id="splash1">
       <nav>
-        <a href="#"><img src="/images/Logo.png"></a>
+        <a href="#"><img src="/images/logo.svg"></a>
         <ul> 
-          <a href="#aboutme">About me</a>
-          <a href="#">Proyects</a>
-          <a href="#">Contact me</a>
+          <a href="#heroabout">About me</a>
+          <a href="#myskills">My skills</a>
+          <a href="#myproyects">Proyects</a>
+          <a href="#email">Contact me</a>
         </ul>
       </nav>
       <img src="/images/Hero I´M.png" id="heroiam">
@@ -58,7 +59,7 @@
         </div>
       </div>
     </section>
-    <section class="myproyects">
+    <section id="myproyects">
       <div id="proyectsabout">
         <div id="proyectsabouttext">
           <h1>My proyects</h1>
@@ -73,6 +74,7 @@
             <div class="text">
               <h3>Proyecto 1</h3>
               <p>breve descripcion del pryecto numero uno pero en inglés</p>
+              <a href=""><img src="/images/insta.png" alt=""></a>
             </div>
           </div>
           <div class="swiper-slide">
@@ -80,34 +82,44 @@
             <div class="text">
               <h3>Proyecto 2</h3>
               <p>breve descripcion del pryecto numero dos pero en inglés</p>
+              <a href=""><img src="/images/insta.png" alt=""></a>
             </div>
           </div>
           <div class="swiper-slide">
-            <img src="/images/negro.jpg" alt="">
+            <a href=""><img src="/images/negro.jpg" alt=""></a>
             <div class="text">
               <h3>Proyecto 3</h3>
               <p>breve descripcion del pryecto numero tres pero en inglés</p>
+              <a href=""><img src="/images/insta.png" alt=""><img src="/images/linkedin.png" alt=""></a>
             </div>
           </div><div class="swiper-slide">
             <img src="/images/negro.jpg" alt="">
             <div class="text">
               <h3>Proyecto 4</h3>
               <p>breve descripcion del pryecto numero cuatro pero en inglés</p>
+              <a href=""><img src="/images/insta.png" alt=""></a>
             </div>
           </div>
         </div>
       </div>
     </section>
     <section class="sayhello">
-      <div class="email">
+      <div id="email">
         <h1>Say Hello at</h1>
         <a href="mailto:sebarzp@gmail.com">sebarzp@gmail.com</a>
       </div>
-      <nav>
+      <nav class="footer-nav">
         <ul> 
-          <a href="#aboutme">About me</a>
-          <a href="#">Proyects</a>
-          <a href="#">Contact me</a>
+          <a href="#heroabout">About me</a>
+          <a href="#myskills">My skills</a>
+          <a href="#myproyects">Proyects</a>
+        </ul>
+      </nav>
+      <nav class="logos-nav">
+        <ul> 
+          <a href="#aboutme"><img src="/images/github.png"></a>
+          <a href="#"><img src="/images/insta.png"></a>
+          <a href="#"><img src="/images/linkedin.png"></a>
         </ul>
       </nav>
     </section>
