--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sebarz</title>
+    <link rel="icon" type="image/svg+xml" href="/images/logo.svg">
     <link rel="stylesheet" href="/style/style.css" />
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">  
     <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css">
@@ -26,6 +27,9 @@
         <h1>I'm Sebastian</h1>
         <p id="thing">I build things for the web</p>
       </div> 
+      <div class="arriba">
+        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M0 16.67l2.829 2.83 9.175-9.339 9.167 9.339 2.829-2.83-11.996-12.17z"/></svg> 
+      </div>
     </section>
     <section class="aboutme">
       <h1 id="aboutme">aboutme</h1>
@@ -38,7 +42,7 @@
           I am focused in building and designing websites, applications, and everything in between.
           <br><br>
           Also passionate about photography, filmmaking and good coffee.</p>
-        <button>Resume</button>
+        <a href="https://drive.google.com/file/d/1pjEQWcTKFdSZFX435izs8jufCodZ3btG/view" target="_blank"><button>Resume</button></a>
       </div> 
     </section>
     <section class="myskills">
@@ -70,45 +74,57 @@
       <div class="swiper-container">
         <div class="swiper-wrapper">
           <div class="swiper-slide">
-            <img src="images/negro.jpg">
+            <img src="images/phlala.jpeg">
             <div class="text">
-              <h3>Proyecto 1</h3>
-              <p>breve descripcion del pryecto numero uno pero en inglés</p>
+              <h3>Photolalaphy Portfolio</h3>
               <div id="code-container">
-                <a href=""><img src="/images/code.svg" alt=""></a>
-                <a href=""><img src="/images/demo.svg" alt=""></a>
+                <a href="https://github.com/sebarz/javascript-30/tree/master/Photolalaphy" target="_blank">
+                  <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M12 5c3.453 0 5.891 2.797 5.567 6.78 1.745-.046 4.433.751 4.433 3.72 0 1.93-1.57 3.5-3.5 3.5h-13c-1.93 0-3.5-1.57-3.5-3.5 0-2.797 2.479-3.833 4.433-3.72-.167-4.218 2.208-6.78 5.567-6.78zm0-2c-4.006 0-7.267 3.141-7.479 7.092-2.57.463-4.521 2.706-4.521 5.408 0 3.037 2.463 5.5 5.5 5.5h13c3.037 0 5.5-2.463 5.5-5.5 0-2.702-1.951-4.945-4.521-5.408-.212-3.951-3.473-7.092-7.479-7.092zm-1 14l-4-1.701v-1.599l4-1.7v1.567l-2.229.933 2.229.93v1.57zm2-5v1.567l2.229.933-2.229.93v1.57l4-1.701v-1.599l-4-1.7z"/></svg>
+                </a> 
+                <a href="https://sebarz.github.io/javascript-30/Photolalaphy" target="_blank">
+                  <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M6 17c2.269-9.881 11-11.667 11-11.667v-3.333l7 6.637-7 6.696v-3.333s-6.17-.171-11 5zm12 .145v2.855h-16v-12h6.598c.768-.787 1.561-1.449 2.339-2h-10.937v16h20v-6.769l-2 1.914z"/></svg>
+                </a>
               </div>            
             </div>
           </div>
           <div class="swiper-slide">
-            <img src="/images/negro.jpg" alt="">
+            <img src="/images/pomo.jpg" alt="">
             <div class="text">
-              <h3>Proyecto 2</h3>
-              <p>breve descripcion del pryecto numero dos pero en inglés</p>
+              <h3>Pomodoro Timer</h3>
               <div id="code-container">
-                <a href=""><img src="/images/code.svg" alt=""></a>
-                <a href=""><img src="/images/demo.svg" alt=""></a>
+                <a href="https://github.com/sebarz/javascript-30/tree/master/countdownTimer" target="_blank">
+                  <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M12 5c3.453 0 5.891 2.797 5.567 6.78 1.745-.046 4.433.751 4.433 3.72 0 1.93-1.57 3.5-3.5 3.5h-13c-1.93 0-3.5-1.57-3.5-3.5 0-2.797 2.479-3.833 4.433-3.72-.167-4.218 2.208-6.78 5.567-6.78zm0-2c-4.006 0-7.267 3.141-7.479 7.092-2.57.463-4.521 2.706-4.521 5.408 0 3.037 2.463 5.5 5.5 5.5h13c3.037 0 5.5-2.463 5.5-5.5 0-2.702-1.951-4.945-4.521-5.408-.212-3.951-3.473-7.092-7.479-7.092zm-1 14l-4-1.701v-1.599l4-1.7v1.567l-2.229.933 2.229.93v1.57zm2-5v1.567l2.229.933-2.229.93v1.57l4-1.701v-1.599l-4-1.7z"/></svg>
+                </a> 
+                <a href="https://sebarz.github.io/javascript-30/countdownTimer" target="_blank">
+                  <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M6 17c2.269-9.881 11-11.667 11-11.667v-3.333l7 6.637-7 6.696v-3.333s-6.17-.171-11 5zm12 .145v2.855h-16v-12h6.598c.768-.787 1.561-1.449 2.339-2h-10.937v16h20v-6.769l-2 1.914z"/></svg>
+                </a>
               </div>            
             </div>
           </div>
           <div class="swiper-slide">
-            <a href=""><img src="/images/negro.jpg" alt=""></a>
+            <img src="/images/wand.jpg" alt="">
             <div class="text">
-              <h3>Proyecto 3</h3>
-              <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Vel nemo harum sed alias quisquam. Id eveniet rem praesentium officiis deleniti.</p>
+              <h3>Travel finder</h3>
               <div id="code-container">
-                <a href=""><img src="/images/code.svg" alt=""></a>
-                <a href=""><img src="/images/demo.svg" alt=""></a>
+                <a href="https://github.com/sebarz/wanderlust-JS" target="_blank">
+                  <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M12 5c3.453 0 5.891 2.797 5.567 6.78 1.745-.046 4.433.751 4.433 3.72 0 1.93-1.57 3.5-3.5 3.5h-13c-1.93 0-3.5-1.57-3.5-3.5 0-2.797 2.479-3.833 4.433-3.72-.167-4.218 2.208-6.78 5.567-6.78zm0-2c-4.006 0-7.267 3.141-7.479 7.092-2.57.463-4.521 2.706-4.521 5.408 0 3.037 2.463 5.5 5.5 5.5h13c3.037 0 5.5-2.463 5.5-5.5 0-2.702-1.951-4.945-4.521-5.408-.212-3.951-3.473-7.092-7.479-7.092zm-1 14l-4-1.701v-1.599l4-1.7v1.567l-2.229.933 2.229.93v1.57zm2-5v1.567l2.229.933-2.229.93v1.57l4-1.701v-1.599l-4-1.7z"/></svg>
+                </a> 
+                <a href="https://sebarz.github.io/wanderlust-JS/" target="_blank">
+                  <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M6 17c2.269-9.881 11-11.667 11-11.667v-3.333l7 6.637-7 6.696v-3.333s-6.17-.171-11 5zm12 .145v2.855h-16v-12h6.598c.768-.787 1.561-1.449 2.339-2h-10.937v16h20v-6.769l-2 1.914z"/></svg>
+                </a>
               </div>
             </div>
           </div><div class="swiper-slide">
-            <img src="/images/negro.jpg" alt="">
+            <img src="/images/beat.jpg" alt="">
             <div class="text">
-              <h3>Proyecto 4</h3>
-              <p>breve descripcion del pryecto numero cuatro pero en inglés</p>
+              <h3>Beatbox with keyboard</h3>
               <div id="code-container">
-                <a href=""><img src="/images/code.svg" alt=""></a>
-                <a href=""><img src="/images/demo.svg" alt=""></a>
+                <a href="https://github.com/sebarz/javascript-30/tree/master/Beatbox" target="_blank">
+                  <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M12 5c3.453 0 5.891 2.797 5.567 6.78 1.745-.046 4.433.751 4.433 3.72 0 1.93-1.57 3.5-3.5 3.5h-13c-1.93 0-3.5-1.57-3.5-3.5 0-2.797 2.479-3.833 4.433-3.72-.167-4.218 2.208-6.78 5.567-6.78zm0-2c-4.006 0-7.267 3.141-7.479 7.092-2.57.463-4.521 2.706-4.521 5.408 0 3.037 2.463 5.5 5.5 5.5h13c3.037 0 5.5-2.463 5.5-5.5 0-2.702-1.951-4.945-4.521-5.408-.212-3.951-3.473-7.092-7.479-7.092zm-1 14l-4-1.701v-1.599l4-1.7v1.567l-2.229.933 2.229.93v1.57zm2-5v1.567l2.229.933-2.229.93v1.57l4-1.701v-1.599l-4-1.7z"/></svg>
+                </a> 
+                <a href="https://sebarz.github.io/javascript-30/Beatbox" target="_blank">
+                  <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M6 17c2.269-9.881 11-11.667 11-11.667v-3.333l7 6.637-7 6.696v-3.333s-6.17-.171-11 5zm12 .145v2.855h-16v-12h6.598c.768-.787 1.561-1.449 2.339-2h-10.937v16h20v-6.769l-2 1.914z"/></svg>
+                </a>
               </div>            
             </div>
           </div>
@@ -143,6 +159,21 @@
       const skills = document.querySelectorAll('.gotoskills')
       const proyects = document.querySelectorAll('.gotoproyects')
       const contact = document.querySelector('.gotoemail')
+      const goup = document.querySelector('.arriba')
+      
+      window.addEventListener('scroll', () => {
+        if(window.scrollY > 200){
+        goup.style['opacity'] = 1;
+        goup.style['visibility'] = 'visible'
+        console.log("shdsjd")
+      }
+      else {
+        goup.style['opacity'] = 0;
+        goup.style['visibility'] = 'hidden'
+      }
+      })
+
+
 
       about.forEach(el => {
         el.addEventListener('click', () => {
@@ -168,6 +199,10 @@
 
     contact.addEventListener('click', () => {
       jump('#email')
+    })
+
+    goup.addEventListener('click', () => {
+      jump('.main')
     })
 
       var swiper = new Swiper('.swiper-container', {
